.provarCaches/00D410000011HE0EAM/objects/rstk__obshipcont__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_obshipcont</customHelpPage>
    <description>obshipcont__c; BOC</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__obshipcont_obship__r.rstk__externalid__c + &apos;&apos; +  rstk__obshipcont_containerid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__obshipcont_containerid__c + &apos; (&apos; +  LEFT( rstk__obshipcont_desc__c , (77 -  LEN(rstk__obshipcont_containerid__c) )) + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__obshipcont_containerid__c +&apos;&apos;+  rstk__obshipcont_desc__c + &apos;&apos; + 
     rstk__obshipcont_obship__r.rstk__obship_shipmentid__c + &apos;&apos; +  rstk__obshipcont_poconttype__r.rstk__poconttype_type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_aesnumber1__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ISF Number for Supplier 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_aesnumber2__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ISF Number for Supplier 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_aesnumber3__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ISF Number for Supplier 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_askmaxf__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requested Shipping Temp Max (F)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_askminf__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requested Shipping Temp Min (F)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_bookreqstdate__c</fullName>
        <inlineHelpText>Date field.  Indicates date booking of this shipment is requested.</inlineHelpText>
        <label>Date Booking Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_class5122__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Class 5.1 or Class 2.22</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_collectiondate__c</fullName>
        <inlineHelpText>Requested pick-up date for this shipment.</inlineHelpText>
        <label>Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_comment__c</fullName>
        <inlineHelpText>Free-form comment field for this shipment.  255 characters max.</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_containerid__c</fullName>
        <inlineHelpText>ID number for container associated with this shipment.</inlineHelpText>
        <label>System ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_contutilization__c</fullName>
        <inlineHelpText>Percent of container being utilized.  Manual entry.</inlineHelpText>
        <label>Container Utilization</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_datercvd__c</fullName>
        <inlineHelpText>Date this container was received at final routing destination.</inlineHelpText>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_desc__c</fullName>
        <inlineHelpText>User-defined text field, 100 characters.</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_havecpc__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>CPC Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_havedgn__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box if DGN (document) is attached to this record.</inlineHelpText>
        <label>DGN Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_hightemp__c</fullName>
        <inlineHelpText>Highest temperature recorded during shipping.</inlineHelpText>
        <label>Actual High Transit Temperature</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_hotshipment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box if this shipment requires expediting.  Information only.</inlineHelpText>
        <label>Hot Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_itemmaxf__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Product Shipping Temp Max (F)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_itemminf__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Product Shipping Temp Min (F)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_loadondate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Load On Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_loadontime__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Load On Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_lowtemp__c</fullName>
        <inlineHelpText>Lowest temperature recorded during shipment.</inlineHelpText>
        <label>Actual Low Transit Temperature</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_obship__c</fullName>
        <label>Outbound Shipment</label>
        <referenceTo>rstk__obship__c</referenceTo>
        <relationshipLabel>Outbound Shipment Containers</relationshipLabel>
        <relationshipName>obshipconts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_pocontainer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Interim Shipment Container</label>
        <referenceTo>rstk__pocontainer__c</referenceTo>
        <relationshipName>obshipconts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_poconttype__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Valid container type from container master maintenance.</inlineHelpText>
        <label>Container Type</label>
        <referenceTo>rstk__poconttype__c</referenceTo>
        <relationshipName>poconttypeobshipconts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_povend1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supplier 1</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipName>povend1obshipcont</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_povend2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supplier 2</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipName>povend2obshipcont</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_povend3__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supplier 3</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipName>povend3obshipcont</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_receivedcon__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Received at Consol. Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_reeferloop__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box.  Indicates to Chemsource that this shipment is a reefer loop requiring special handling.</inlineHelpText>
        <label>Container Release Paperwork Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_sealnumber__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Seal Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_serialno__c</fullName>
        <inlineHelpText>Serial number of container associated with this shipment.</inlineHelpText>
        <label>Container Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_setpointf__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Set Point Requested (F)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_sugmidf__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Product Temp Mind-Point (F)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__obshipcont_tempcheck__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checkbox.  Indicates this shipment requires the control of shipping temperatures based on the guidelines provided in this record.</inlineHelpText>
        <label>Temperature Control Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Outbound Shipment Container</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outbound Shipment Containers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Container_Type</fullName>
        <active>true</active>
        <description>Container Type is not editable as Container is already collected.</description>
        <errorConditionFormula>!ISNEW() &amp;&amp; ISCHANGED(rstk__obshipcont_poconttype__c) &amp;&amp; !ISNULL(rstk__obshipcont_collectiondate__c) &amp;&amp; rstk__obshipcont_collectiondate__c &lt;= TODAY()</errorConditionFormula>
        <errorMessage>Container Type is not editable as Container is already collected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Container_Utilization</fullName>
        <active>true</active>
        <description>Container Utilization cannot be less than zero, nor greater then 999.99.</description>
        <errorConditionFormula>rstk__obshipcont_contutilization__c &lt; 0 || rstk__obshipcont_contutilization__c &gt; 999.99</errorConditionFormula>
        <errorMessage>Container Utilization cannot be less than zero, nor greater then 999.99.</errorMessage>
    </validationRules>
</CustomObject>